Archive2/61/720b019d089c3b/output
main.cpp:25:39: error: expected unqualified-id before '{' token
 class cassaAutomatica{ public: listino{
                                       ^
main.cpp:61:1: error: expected '}' at end of input
 }
 ^
main.cpp:61:1: error: expected unqualified-id at end of input
